--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/express": "^4.17.9",
     "@types/node": "^10.15.3",
     "express": "^4.17.1",
